# RustRadarSim

./: ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  types.ts
frontend/src/components/: CircularRadar.test.tsx  CircularRadar.tsx  DroneGrid.test.tsx  DroneGrid.tsx  HealthDashboard.css  HealthDashboard.tsx  SimulationControls.test.tsx  SimulationControls.tsx
frontend/src/hooks/: useAnalysis.ts  useAnalysisWebSocket.ts  useRetry.ts  useWebSocket.ts
frontend/src/test/: setup.ts
src/: analysis.rs  constants.rs  error.rs  handlers.rs  lib.rs  main.rs  observability.rs  routes.rs  simulation.rs  types.rs
