[package]
name = "radar_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = "0.15"
num-complex = "0.4"
rand = "0.8"
rand_distr = "0.4"
csv = "1.1"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"