[package]
name = "radar_sim"
version = "0.1.0"
edition = "2021"

[lib]
name = "radar_sim"
path = "src/lib.rs"

[dependencies]
ndarray = "0.15"
num-complex = "0.4"
rand = "0.8"
rand_distr = "0.4"
csv = "1.1"
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "limit"] }
futures-util = "0.3"
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
axum-test = "9.0"
http-body-util = "0.1"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }